[gd_scene load_steps=3 format=3 uid="uid://nbq6kcqr8etw"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_1k5er"]
[ext_resource type="AudioStream" uid="uid://cs783tijo578f" path="res://assets/music/4_working_time_master.ogg" id="2_v7jgi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1k5er")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -200.0
offset_right = 187.5
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="Options" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "OPTIONS"

[node name="Exit" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "EXIT"

[node name="GameName" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -302.5
offset_right = 302.5
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "GAME NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_v7jgi")

[connection signal="pressed" from="Background/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
